# RexEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-all.sh  build-amd64.sh  build-dos32-all.sh  build-dos32-djgpp.bat  build-dos32-djgpp.sh  build-dos32-watcom.bat  build-dos32-watcom.sh  build-functional-targets.sh  build-linux32-watcom.sh  build-linux64-gcc.sh  build-null.sh  build-os2-watcom.sh  build-qrex.sh  build-sdl-gcc.sh  build-sdl-mingw.sh  build-win32-watcom.sh  build-win386-watcom.sh  dosbox-x.conf  run_dosbox-x-duke4ever.sh  run_dosbox-x.bat  run_goxel.sh
source/: CMakeLists.txt  rex_engine.code-workspace
source/applications/brendertest/: CMakeLists.txt  brendertest.c
source/applications/junkapp/: CMakeLists.txt  junkapp.c
source/applications/liberator/: CMakeLists.txt  liberator.c  liberator.h
source/applications/noware/: haiku.c  noware.h
source/applications/paktui/: CMakeLists.txt  paktui.c
source/applications/testgame/: CMakeLists.txt  testgame.c  testgame.h
source/core/: CMakeLists.txt
source/core/brender/: CMakeLists.txt
source/core/engine/: bootstrap.c  device_io.c  error.c  file_io.c  log.c  resfile.c
source/core/formats/: formats.c  lev.c  mdl.c  pak.c  tmf.c  wal.c
source/core/inc/: formats.h  io.h  logic.h  rendering.h  rex.h  rex_formats.h  rex_io.h  rex_logic.h  rex_physics.h  rex_rendering.h  rex_types.h  rex_utilities.h  rex_world.h  types.h  utilities.h
source/core/inc/embedded/: ModernDOS8x14.h  ModernDOS8x16.h  ModernDOS8x8.h  ModernDOS9x14.h  ModernDOS9x16.h
source/core/inc/engine/: bootstrap.h  device_io.h  error.h  file_io.h  log.h  math.h  resfile.h  types.h
source/core/inc/formats/: lev.h  mdl.h  ms3dmm.h  pak.h  tmf.h  wal.h
source/core/inc/lib_io/: nuklear.h  tinyfd.h
source/core/inc/physics/: physics.h
source/core/inc/rendering/: window.h
source/core/io/: devices.c  files.c  resources.c  tinyfd.c
source/core/lib_io/: brender.c  tinyfd.c
source/core/logic/: math.c  shutdown.c  startup.c
source/core/rendering/: brender.c  fonts.c  nuklear.c  palettes.c  window.c
source/core/utilities/: endian.c  error.c  failure.c
source/core/world/: create.c
source/decker/: CMakeLists.txt  resources.h
source/decker/dos/: SDL.h  decker_dos.h
source/duke4evr/: back1.cpp  back2.cpp  duke4evr.hpp  fuck.cpp  fuck2.cpp  main.cpp  sectors.cpp
source/game/: game.hpp  main.cpp
source/game_old/: duke4evr.hpp  main.cpp
source/liberator/: CMakeLists.txt  liberator.c  liberator.h  main.c
source/qrex/: definitions.src  progs.src  progs_client.src  progs_menu.src  progs_server.src
source/qrex/shared/: fteextensions.qc
source/rex/: CMakeLists.txt  rex.hpp  rex_priv.hpp  rextypes.hpp
source/rex/core/: args.cpp  args.hpp  bootstrap.cpp  bootstrap.hpp  bootstrp.cpp  bootstrp.hpp  camera.cpp  camera.hpp  clock.cpp  clock.hpp  console.cpp  console.hpp  context.cpp  context.hpp  error.cpp  error.hpp  graphics.cpp  graphics.hpp  io.cpp  io.hpp  keyboard.cpp  keyboard.hpp  log.cpp  log.hpp  math_i.cpp  math_i.hpp  math_sin.cpp  math_x.cpp  math_x.hpp  mathtabl.cpp  mathtabl.hpp  mempool.cpp  mempool.hpp  model.cpp  model.hpp  mouse.cpp  mouse.hpp  render.cpp  render.hpp  scene.cpp  (+14 more)
source/rex/core/glrend/: test.cpp  test.hpp
source/rex/core/model/: model.hpp  poly.hpp  sector.hpp  sprite.hpp  tile.hpp  types.hpp  voxel.hpp
source/rex/core/softrend/: sector.cpp  sector.hpp  tile.cpp  tile.hpp
source/rex/modules/core/colormap/: colormap.cpp  colormap.hpp
source/rex/modules/core/console/: console.cpp  console.hpp
source/rex/modules/core/math/: fixed.cpp  fixed.hpp  integer.cpp  integer.hpp  math.hpp  sintable.cpp  table.cpp  table.hpp
source/rex/modules/core/palette/: palette.cpp  palette.hpp
source/rex/modules/core/surface/: picture.cpp  picture.hpp
source/rex/modules/core/utils/: utils.cpp  utils.hpp
source/rex/modules/fileio/art/: art.cpp  art.hpp
source/rex/modules/fileio/grp/: grp.cpp  grp.hpp
source/rex/modules/fileio/imf/: imf.cpp  imf.hpp
source/rex/modules/fileio/iwad/: iwad.cpp  iwad.hpp
source/rex/modules/fileio/pak/: pak.cpp  pak.hpp
source/rex/modules/fileio/wad/: wad.cpp  wad.hpp
source/rex/platform/: dos.cpp  dos_keys.hpp  null.cpp  null_keys.hpp  platform.hpp  sdl.cpp  sdl_keys.hpp  win32.cpp  win386.cpp
source/rex/render/portal2d/: portal2d.hpp
source/rex/render/raycast/: render.cpp  render.hpp
source/rex/render/sector/: portal2d.cpp  portal2d.hpp  render.cpp  render.hpp
source/rex/render/voxel/: render.cpp  voxel.hpp  world.cpp
source/rex/test/: hello.c
source/rex/thrdprty/stb/: stb.h  stb_image.c  stb_image_resize.c  stb_image_write.c  stb_leakcheck.c  stb_truetype.c
source/rex3d/: dos.cpp  dos.hpp  math.cpp  math.hpp  portrend.cpp  portrend.hpp  raycast2.cpp  raycast2.hpp  raycastr.cpp  raycastr.hpp  rex3d.cpp  rex3d.hpp  vga.cpp  vga.hpp
source/rex3d/core/: colormap.cpp  colormap.hpp  console.cpp  console.hpp  math.cpp  math.hpp  palette.cpp  palette.hpp  picture.cpp  picture.hpp  types.hpp  utils.cpp  utils.hpp
source/rex3d/hwdrv/: dos.cpp  dos.hpp
source/rex3d/math/: math_i.cpp  math_i.hpp  math_x.cpp  math_x.hpp  mathtabl.cpp  mathtabl.hpp  matrix.cpp  matrix.hpp  sintable.cpp  sintable.hpp  sintable2.cpp  tables.cpp
source/rex3d/rend/: raycastr.cpp  raycastr.hpp  spanner.cpp  spanner.hpp
source/rex3d/thrdprty/: rcl.cpp  rcl.hpp  tiled.cpp  tiled.hpp
source/rex3d/viddrv/: vesa.cpp  vesa.hpp  vga.cpp  vga.hpp
source/rex3d/world/: object.cpp  object.hpp  sector.cpp  sector.hpp  world.hpp
source/rex_test/: CMakeLists.txt  html.cpp  rex_test.cpp  rex_test.hpp
source/testapp/: CMakeLists.txt  testapp.cpp  testapp.hpp
source/testbed/: main.cpp  testbed.hpp
source/testgame/: CMakeLists.txt  testgame.c  testgame.h
source/vivaduke/: CMakeLists.txt  bootstrp.cpp  camera.cpp  endscreen.cpp  frame.cpp  level.cpp  mouse.cpp  tick.cpp  vivaduke.cpp  vivaduke.hpp
source2/: CMakeLists.txt
source2/arch/: dos.c  vga.c
source2/include/: rex.h  rexdos.h  rextypes.h
sourcexx/: CMakeLists.txt
sourcexx/test/: main.cpp
(+160 files in other folders)
